--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
 spring.datasource.username=postgres
-spring.datasource.password=1309rizki
+spring.datasource.password=diana197
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,5 +11,20 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.error.include-stacktrace=never
 spring.servlet.multipart.max-file-size=10MB
+
+
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=25
+spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=imo.askrindo@gmail.com
+spring.mail.password=imoaskrindo2021
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=20000
+spring.mail.properties.mail.smtp.timeout=20000
+spring.mail.properties.mail.smtp.writetimeout=20000
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 document-task=D:/document_task/
