[IMPROVE] setting app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
 spring.datasource.username=postgres
-spring.datasource.password=diana197
+spring.datasource.password=1309rizki
 
 
 spring.jpa.hibernate.ddl-auto=update
