[IMPROVE] task service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
+#spring.datasource.username=postgres
+#spring.datasource.password=1309rizki
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
-spring.datasource.username=postgres
-spring.datasource.password=1309rizki
-
-#spring.datasource.url=${DATABASE_URL_MONEV}
-#spring.datasource.username=${DATABASE_USERNAME}
-#spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL_MONEV}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 
 
@@ -33,4 +33,5 @@ spring.mail.properties.mail.smtp.timeout=20000
 spring.mail.properties.mail.smtp.writetimeout=20000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-document-task=D:/document_task/
+#document-task=D:/document_task/
+document-task=${DOCUMENT_TASK}
