--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring3
-#spring.datasource.username=postgres
-#spring.datasource.password=nialljames13
+spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring2 
+spring.datasource.username=postgres
+spring.datasource.password=nialljames13
 #
-spring.datasource.url=${DATABASE_URL_MONEV}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=${DATABASE_URL_MONEV}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 
 
 spring.jpa.hibernate.ddl-auto=update
