feat : add training service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
-#spring.datasource.username=postgres
-#spring.datasource.password=password12
+spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
+spring.datasource.username=postgres
+spring.datasource.password=password12
 
-spring.datasource.url=${DATABASE_URL_MONEV}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=${DATABASE_URL_MONEV}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -31,5 +31,5 @@ spring.mail.properties.mail.smtp.timeout=20000
 spring.mail.properties.mail.smtp.writetimeout=20000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#document-task=D:/document_task/
-document-task=${DOCUMENT_TASK}
+document-task=D:/Askrindo/project/IMO/document
+#document-task=${DOCUMENT_TASK}
