feat : service review aa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/project_monitoring
+spring.datasource.url=jdbc:postgresql://193.203.164.156:5432/project_monitoring
 spring.datasource.username=postgres
 spring.datasource.password=password12
 
